--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -1,5 +1,11 @@
 name: Go Unit Test
-on: [push]
+on:
+  - push:
+      branches:
+        - main
+  - pull_request:
+      branches:
+        - main
 
 jobs:
   build:
