--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -1,9 +1,9 @@
 name: Go Unit Test
 on:
-  - push:
+  push:
       branches:
         - main
-  - pull_request:
+  pull_request:
       branches:
         - main
 
