--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -8,7 +8,7 @@ on:
         - main
 
 jobs:
-  build:
+  go-build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
